syntax = "proto3";
package kratos.api;

option go_package = "prometheus-manager/apps/master/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  NodeServer nodes = 3;
  Trace trace = 4;
}

message HTTP {
  string network = 1;
  string addr = 2;
  google.protobuf.Duration timeout = 3;
}
message GRPC {
  string network = 1;
  string addr = 2;
  google.protobuf.Duration timeout = 3;
}

message Server {
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  Database database = 1;
  Redis redis = 2;
}

message NodeServer {
  repeated HTTP http = 1;
  repeated GRPC grpc = 2;
}

// 链路追踪
message Trace {
  string endpoint = 1;
}
